Añadidos los enlaces

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="about.html">About</a>
                         <ul class="primary">
                             <li>
-                                <a href="ejemplo.html">Ejemplo</a>
+                                <a href="ejemplo.html">ejemplo</a>
                             </li>
                         </ul>
                     </li>
@@ -52,8 +52,9 @@
             <div class="body">
                 <div>
                     <div>
-                        <h1>NEW PRODUCT</h1>
-                        <h2>The Twist of Healthy Yogurt</h2>
+                        <h1>AUTORES</h1>
+                        <h2>Jennifer Díez</h2>
+                        <h2>Daniel Díaz</h2>
                         <p>This website template has been designed by freewebsitetemplates.com for you, for free. You can replace all this text with your own text.</p>
                     </div>
                     <img src="images/yogurt.jpg" alt="">
@@ -63,8 +64,8 @@
                 <div>
                     <ul>
                         <li>
-                            <a href="product.html" class="product"></a>
-                            <h1>PRODUCTS</h1>
+                            <a href="ejemplo.html" class="product"></a>
+                            <h1>Ejemplo</h1>
                         </li>
                         <li>
                             <a href="about.html" class="about"></a>
