--- a/ejemplo.html
+++ b/ejemplo.html
@@ -45,7 +45,7 @@
         <div id="body">
             <div class="header">
                 <div>
-                    <h1>Products</h1>
+                    <h1>Práctica de Git</h1>
                 </div>
             </div>
             <div>
