--- a/articulo.html
+++ b/articulo.html
@@ -52,10 +52,13 @@
             <div class="body">
                 <div>
                     <div>
-                        <h1>AUTORES</h1>
+
                         <h2>Jennifer Díez</h2>
                         <h2>Daniel Díaz</h2>
-                        <p>This website template has been designed by freewebsitetemplates.com for you, for free. You can replace all this text with your own text.</p>
+                        <p>GitHub es una forja (plataforma de desarrollo colaborativo) para alojar proyectos utilizando el sistema de control de versiones Git. Se utiliza principalmente para la creación de código fuente de programas de ordenador. El software
+                            que opera GitHub fue escrito en Ruby on Rails. Desde enero de 2010, GitHub opera bajo el nombre de GitHub, Inc. Anteriormente era conocida como Logical Awesome LLC. El código de los proyectos alojados en GitHub se almacena
+                            típicamente de forma pública. El 4 de junio de 2018 Microsoft compró GitHub por la cantidad de 7500 millones de dólares,1​2​ al inicio el cambio de propietario generó preocupaciones y la salida de algunos proyectos de este
+                            repositorio,3​ sin embargo no fueron representativos. GitHub continúa siendo la plataforma más importante de colaboración para proyectos Open Source.</p>
                     </div>
                     <img src="images/yogurt.jpg" alt="">
                 </div>
