--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <li class="selected">
                         <a href="index.html">Home</a>
                     </li>
+                    <li class="articulo">
+                        <a href="articulo.html">Articulo</a>
+                    </li>
                     <li class="menu">
                         <a href="about.html">About</a>
                         <ul class="primary">
