--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
                 <ul id="navigation">
                     <li class="selected">
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li class="menu">
                         <a href="about.html">About</a>
