--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="articulo.html">Articulo</a>
                     </li>
                     <li class="menu">
-                        <a href="about.html">About</a>
+                        <a href="about.html">About2.0</a>
                         <ul class="primary">
                             <li>
                                 <a href="ejemplo.html">ejemplo</a>
